Fixed img align css error

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ img {
     border-radius: 2%;  
     box-shadow: 2px 2px 20px; 
     margin-bottom: 5%;
-    align-self: right;
 }
 
 p {
